# beneylu-photo-sync

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/audits/: 2026-06-20-ui-v2-playwright-audit.md
docs/superpowers/plans/: 2026-06-15-phase1-cardboard-exporter.md  2026-06-15-phase2a-web-ui-gallery.md  2026-06-19-ui-redesign-cosmos.md  2026-06-20-ui-v2.md
docs/superpowers/specs/: 2026-06-15-beneylu-photo-exporter-design.md  2026-06-15-web-ui-gallery-design.md  2026-06-19-ui-redesign-cosmos.md  2026-06-20-ui-v2-design.md  2026-06-20-ui-v2-phaseC.md
runtimes/docker/: Dockerfile  Dockerfile.web  docker-compose.yml
src/beneylu_photo_sync/: cli.py
src/beneylu_photo_sync/core/: client.py  config.py  errors.py  models.py  naming.py  state.py  sync.py
src/beneylu_photo_sync/core/sources/: base.py  cardboard.py
src/beneylu_photo_sync/core/storage/: base.py  filesystem.py
src/beneylu_photo_sync/web/: __main__.py  app.py  archive.py  auth.py  gallery.py  jobs.py  scheduler.py  settings_store.py  thumbnails.py
src/beneylu_photo_sync/web/assets/cosmos/: cosmos.src.css
src/beneylu_photo_sync/web/static/: app.js  cosmos.css
src/beneylu_photo_sync/web/templates/: base.html  config.html  gallery.html  login.html
src/ent_exporter/: cli.py  client.py  config.py  errors.py  exif.py  models.py  naming.py  state.py  sync.py
src/ent_exporter/sources/: base.py  cardboard.py
src/ent_exporter/storage/: base.py  filesystem.py
src/ent_exporter/web/: __main__.py  app.py  archive.py  auth.py  gallery.py  jobs.py  scheduler.py  settings_store.py  thumbnails.py
src/ent_exporter/web/assets/cosmos/: cosmos.src.css
src/ent_exporter/web/static/: app.js  cosmos.css  style.css
src/ent_exporter/web/templates/: base.html  config.html  gallery.html  login.html
tests/: conftest.py  test_cardboard_source.py  test_cli.py  test_client_auth.py  test_client_content.py  test_client_refresh.py  test_config.py  test_errors.py  test_exif.py  test_filesystem_storage.py  test_fixtures.py  test_models.py  test_naming.py  test_smoke.py  test_state.py  test_sync.py
tests/fixtures/: boards.json  cards.json  login_check.json  resolved_media.json  users_me.json
tests/web/: test_app.py  test_archive.py  test_auth.py  test_entrypoint.py  test_gallery.py  test_jobs.py  test_scaffold.py  test_scheduler.py  test_settings_store.py  test_thumbnails.py
