# pyproject.toml
[project]
name = "ent-exporter"
version = "0.1.0"
description = "Export school photos from Beneylu School (ent-ecole.fr)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "Pillow>=10.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
ent-exporter = "ent_exporter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ent_exporter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
