# pyproject.toml
[project]
name = "beneylu-photo-sync"
version = "0.1.0"
description = "Export school photos from Beneylu School (ent-ecole.fr)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "Pillow>=10.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "respx>=0.21", "ruff>=0.5"]
web = ["fastapi>=0.115", "jinja2>=3.1", "python-multipart>=0.0.9", "uvicorn[standard]>=0.30"]

[project.scripts]
beneylu-photo-sync = "beneylu_photo_sync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beneylu_photo_sync"]
artifacts = ["src/beneylu_photo_sync/web/templates/*", "src/beneylu_photo_sync/web/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
